# mifare-tools

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/DBO/: CommandLineOption.cpp  CommandLineOption.h
cli/Interface/: CommandLineParser.cpp  CommandLineParser.h  MainClass.cpp  MainClass.h
src/: CMakeLists.txt
src/Business/: FreeFareDeviceBusiness.cpp  FreeFareDeviceBusiness.h  FreeFareTag.cpp  FreeFareTag.h  FreeFareTagBusiness.cpp  FreeFareTagBusiness.h  LibNfc.cpp  LibNfcBusiness.cpp  LibNfcBusiness.h  NfcDevice.cpp  NfcDevice.h  NfcDeviceBusiness.cpp  NfcDeviceBusiness.h  StringUtils.cpp  StringUtils.h
src/DBO/: AccessBitsDbo.cpp  AccessBitsDbo.h  ArrayUtils.cpp  ArrayUtils.h  StringUtils.cpp  StringUtils.h
src/DataAccess/: FreeFareDevice.cpp  FreeFareDevice.h  FreeFareTag.cpp  FreeFareTag.h  LibNfc.cpp  LibNfc.h  NfcDevice.cpp  NfcDevice.h  SectorDbo.cpp  SectorDbo.h
src/Interface/: MainClass.cpp
tests/: CMakeLists.txt  test-main.cpp
